<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_create_vote"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_create_vote" />
        <item
            android:id="@+id/nav_my_vote"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_vote" />
    </group>
</menu>